--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "styled-components": "^6.1.8",
+    "universal-cookie": "^7.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
